--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,10 @@
   --sm-screen: 90%;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 header {
   height: 100vh;
   background: linear-gradient(
@@ -34,6 +38,10 @@ body {
 .container {
   width: var(--lg-screen);
   margin: 0 auto;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  cursor: pointer;
 }
 img {
   width: 100%;
@@ -42,13 +50,17 @@ img {
   display: block;
 }
 nav {
-  height: 100px;
-  /* background-color: aqua; */
+  padding: 30px 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* position: fixed;
-  width: 100%; */
+  position: fixed;
+  background-color: var(--btnColor);
+  z-index: 998;
+  width: 100%;
+  right: 0;
+  left: 0;
+  padding: 20px 30px;
 }
 nav ul {
   list-style: none;
@@ -57,6 +69,52 @@ nav ul {
   font-weight: 600;
   gap: 2rem;
 }
+nav .btn {
+  display: none;
+  z-index: 999;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+nav .menuCard{
+  background-color: var(--btnColor);
+  position: fixed;
+  padding: 4rem;
+  padding-top: 10rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-left: -200vw;
+  z-index: 1000;
+}
+
+nav .menuCard ol{
+  list-style: none;
+  color: inherit;
+}
+
+nav .menuCard ol .btn1{
+  background-color: var(--divColor);
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 0;
+  margin-top: 30px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: ease-in-out 0.5s;
+}
+
+nav .menuCard ol .btn1:hover{
+  transform: scale(1.2);
+}
+
 nav ul li a {
   text-decoration: none;
   color: var(--textColor);
@@ -329,6 +387,14 @@ button:nth-child(2) {
     font-weight: 600;
     gap: 2rem;
   }
+  nav .btn {
+  display: block;
+  background-color:var(--btnColor) ;
+  padding: 10px 25px;
+  border-radius: 5px;
+  border: 1px solid var(--divColor);
+  position: fixed;
+}
   .services{
     grid-template-columns: repeat(1,1fr);
     margin-top: 2rem;
